<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".DistrictDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/active"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/districtActive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textAlignment="textEnd"
            android:textSize="18sp"
            android:padding="10dp"
            android:textColor="@color/color_one"
            android:textStyle="bold"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_gravity="center"
        android:background="@color/color_two"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmed"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/districtConfirmed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textAlignment="textEnd"
            android:textSize="18sp"
            android:padding="10dp"
            android:textColor="@color/color_one"
            android:textStyle="bold"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_gravity="center"
        android:background="@color/color_two"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recovered"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/districtRecovered"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textAlignment="textEnd"
            android:textSize="18sp"
            android:padding="10dp"
            android:textColor="@color/color_one"
            android:textStyle="bold"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_gravity="center"
        android:background="@color/color_two"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deceased"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/districtDeceased"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textAlignment="textEnd"
            android:textSize="18sp"
            android:padding="10dp"
            android:textColor="@color/color_one"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>